--- a/app/styles/modalToggleAnimations.css
+++ b/app/styles/modalToggleAnimations.css
@@ -1,33 +1,33 @@
-.open-modal-btn
+.modal-toggle-btn
 .top-line {
   transition: 150ms cubic-bezier(0.4, 0, 0.2, 1) all;
 }
 
-.open-modal-btn 
+.modal-toggle-btn 
 .bottom-line {
   transition: 150ms cubic-bezier(0.4, 0, 0.2, 1) all;
 }
 
-.open-modal-btn.open
+.modal-toggle-btn.open
 .top-line {
   transform: translateY(0.453125rem);
   opacity: 0;
 }
 
-.open-modal-btn.open
+.modal-toggle-btn.open
 .bottom-line {
   transform: translateY(-10px);
   height: 0px;
   opacity: 0;
 }
 
-.open-modal-btn.open
+.modal-toggle-btn.open
 .close-line1 {
   transform: scaleX(1);
   transform: rotate(-45deg);
 }
 
-.open-modal-btn.open
+.modal-toggle-btn.open
 .close-line2 {
   transform: scaleX(1);
   transform: rotate(45deg);
