--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -21,3 +21,9 @@ body {
   background: var(--primaryViolet);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.no-scroll {
+  overflow-y: hidden;
+  height: 100vh;
+  position: relative;
+}
